[package]
name = "chinese-pronounce"
version = "0.1.0"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hound = "3"
structopt = "0.3"
anyhow = "1"
rustfft = "3"
plotters = { version = "0.3.0" }
